--- a/style.css
+++ b/style.css
@@ -412,6 +412,7 @@ img {
     visibility: hidden;
     opacity: 0;
     pointer-events:none;
+    transition:.3s;
 }
 .donate-form.show{
     visibility: visible;
