--- a/style.css
+++ b/style.css
@@ -405,6 +405,7 @@ img {
     width: 340px;
     top: 50%;
     left: 50%;
+    transform: translate(-45%,-45%);
     box-shadow: 0 0 10px rgb(0, 0, 0, 0.5);
     padding:20px;
     border-radius: 20px;
